layout fix, chessboard is now fully visible

--- a/src/components/chessboard/chessboard.scss
+++ b/src/components/chessboard/chessboard.scss
@@ -1,5 +1,8 @@
 .chessboard {
+  padding: 2rem;
+  width: 100%;
   display: grid;
   grid-template-rows: repeat(8, 1fr);
   grid-template-columns: repeat(8, 1fr);
+  max-width: 100vh;
 }
