--- a/src/components/chessboardField/chessboardFiled.scss
+++ b/src/components/chessboardField/chessboardFiled.scss
@@ -26,6 +26,10 @@
       opacity: 0.5;
     }
   }
+
+  @media (max-width: $globalMobilePhoneBreakpoint) {
+    font-size: 1rem;
+  }
 }
 
 .chessboardField--dark {
@@ -42,12 +46,20 @@
   position: absolute;
   bottom: 0.5rem;
   right: 0.5rem;
+  @media (max-width: $globalMobilePhoneBreakpoint) {
+    bottom: 0.2rem;
+    right: 0.2rem;
+  }
 }
 
 .chessboardField_row {
   position: absolute;
   top: 0.5rem;
   left: 0.5rem;
+  @media (max-width: $globalMobilePhoneBreakpoint) {
+    top: 0.2rem;
+    left: 0.2rem;
+  }
 }
 
 .chessboardField_image {
